# cybersentinel-evolver

./: .coverage  .gitignore  SESSION_HANDOFF_NEXT_2026-07-15-II.md  SESSION_HANDOFF_NEXT_2026-07-15.md  SESSION_PROMPT_PHASE2_COMPLETE_2026-07-15.md  SESSION_REPORT_PHASE2_FINAL_2026-07-15.md  SESSION_REPORT_PHASE3_2026-07-15.md  data.db  pyproject.toml
docs/: BRD.md  ROADMAP.md  TEST_PLAN.md  TEST_RESULTS.md  TRD.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  registerSW.ts
frontend/src/api/: client.ts
frontend/src/components/: MetricsCard.tsx
frontend/test-results/: .last-run.json
grafana/: dashboard.json
scheduler/: README.md  cs-evolver.service  cs-evolver.timer  run_evolve.sh
scripts/: run_server.py
src/cybersentinel_evolver/: __init__.py  adaptive_detector.py  attacks.py  cli.py  cybersentinel_client.py  database.py  detection.py  gap_analyzer.py  llm_client.py  llm_judge.py  metrics.py  models.py  self_promoter.py  server.py
src/cybersentinel_evolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adaptive_detector.py  test_benchmarks.py  test_cli_v2.py  test_cybersentinel_client.py  test_database_v2.py  test_detection.py  test_evolution_loop.py  test_fault_tolerance.py  test_fuzz.py  test_gap_analyzer.py  test_llm_client.py  test_llm_judge.py  test_metrics.py  test_models.py  test_mutation_escape.py  test_scheduler.py  test_self_promoter.py  test_server.py  test_smoke_e2e.py  test_threat_feeds.py
(+7 files in other folders)
