[project]
name = "cybersentinel-evolver"
version = "0.1.0"
description = "A self-improving abuse detection testing platform that grounds itself in real attack intelligence, runs tournaments between detection strategies, and continuously mutates its scenarios — measuring success in dollars detected."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cs-evolver = "cybersentinel_evolver.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
select = ["E", "F", "I"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
